--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -506,7 +506,19 @@
         },
         {
           "data_type": "PlayerProjectileDef",
-          "data": {}
+          "data": {
+            "on_collision": {
+              "event_list": [
+                {
+                  "event_type": "PlaySound",
+                  "event": {
+                    "entity": "Source",
+                    "sound_name": "paper_bounce"
+                  }
+                }
+              ]
+            }
+          }
         },
         {
           "data_type": "SoundDef",
@@ -913,17 +925,5 @@
       "position": { "x": 0, "y": 0, "z": 0 },
       "scale": { "x": 25, "y": 25, "z": 25 }
     }
-  ],
-
-  "on_bounce": {
-    "event_list": [
-      {
-        "event_type": "PlaySound",
-        "event": {
-          "entity": "Source",
-          "sound_name": "paper_bounce"
-        }
-      }
-    ]
-  }
+  ]
 }
