Patrons will now only stand up when in range.
Added 'pop in' and 'pop out' values to patrons, which control when they
stand up and when they fall back down. If the distance between you and
the patron is less than the pop in radius, the patron will stand up. If
the distance between you and the patron is greater than the pop out
radius (which is must be greater than or equal to the pop in radius) then
they will fall back down.

Tested on Linux
Bug: 21640564

Change-Id: I90170aaac0a484c4514399724b6a7fe800f802b4

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -95,6 +95,7 @@
         {
           "data_type": "RailDenizenDef",
           "data" : {
+            "is_river": true,
             "start_time": 0,
             "on_new_lap": {
               "event_list": [
@@ -252,6 +253,8 @@
         {
           "data_type": "PatronDef",
           "data": {
+            "pop_in_radius": 30,
+            "pop_out_radius": 35,
             "on_collision": {
               "event_list": [
                 {
@@ -357,6 +360,8 @@
         {
           "data_type": "PatronDef",
           "data": {
+            "pop_in_radius": 40,
+            "pop_out_radius": 45,
             "on_collision": {
               "event_list": [
                 {
@@ -454,6 +459,8 @@
         {
           "data_type": "PatronDef",
           "data": {
+            "pop_in_radius": 40,
+            "pop_out_radius": 45,
             "on_collision": {
               "event_list": [
                 {
@@ -635,7 +642,7 @@
         {
           "data_type": "TransformDef",
           "data": {
-            "position": { "x": 0.0, "y": 0.0, "z": 0.0 },
+            "position": { "x": 0.0, "y": 0.0, "z": 0.0 }
           }
         },
         {
