Added a min_lap and max_lap to patrons.
Each time the raft makes a lap around the river, it's lap counter is
incremented.  Patrons will only stand up when the lap counter is in the
range [min_lap, max_lap].

Tested on linux.
Bug: 21640316

Change-Id: I795447e1f0f20a1db1820747444981b5d183a684

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -100,15 +100,6 @@
             "on_new_lap": {
               "event_list": [
                 {
-                  "event_type": "ModifyAttribute",
-                  "event": {
-                    "entity": "Source",
-                    "op": "Add",
-                    "attrib": "Lap",
-                    "value": 1
-                  }
-                },
-                {
                   "event_type": "ChangeRailSpeed",
                   "event": {
                     "entity": "Source",
@@ -145,8 +136,7 @@
         {
           "data_type": "RiverDef",
           "data" : {}
-        },
-
+        }
       ]
     },
 
@@ -255,6 +245,8 @@
           "data": {
             "pop_in_radius": 30,
             "pop_out_radius": 35,
+            "min_lap": 0,
+            "max_lap": 1,
             "on_collision": {
               "event_list": [
                 {
@@ -362,6 +354,8 @@
           "data": {
             "pop_in_radius": 40,
             "pop_out_radius": 45,
+            "min_lap": 2,
+            "max_lap": 3,
             "on_collision": {
               "event_list": [
                 {
@@ -461,6 +455,8 @@
           "data": {
             "pop_in_radius": 40,
             "pop_out_radius": 45,
+            "min_lap": 1,
+            "max_lap": 2,
             "on_collision": {
               "event_list": [
                 {
