Adding a way to place a defined entity from config
Adding a list of predefined entities to be placed via the config,
placing entities based on what has beed defined in the entity_def
list.

Change-Id: I715f8c1f49e8391936a6a9258ed92e5f877948e8

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -950,5 +950,8 @@
       "position": { "x": 0, "y": 0, "z": 0 },
       "scale": { "x": 25, "y": 25, "z": 25 }
     }
+  ],
+
+  "predefined_entity_list": [
   ]
 }
