Game no longer requires everything to be on the same rail.
RailDenizenComponent was originally intended to abstract the
sushi track, so it only ever kept track of one spline at a time.
This change allows it to track one spline per entity, so it can
now be used for general movement control.

Also adds a railmanager for managing data files containing rail
definitions, so that multiple entities can share rails without
needing to duplicate data.

Change-Id: Ibb21522143bc08e2f7e269d16242bd8435f01c95

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,8 @@ set(zooshi_SRCS
     src/inputcontrollers/mouse_controller.cpp
     src/inputcontrollers/mouse_controller.h
     src/main.cpp
+    src/railmanager.cpp
+    src/railmanager.h
     src/rawassets
 )
 
