Adding an initial up impulse to thrown sushi
Adding some extra velocity on the player's up vector to thrown sushi,
to prevent having to always look above the patrons as you try to feed
them.

Change-Id: I935013e74545f5b785713d8c84473acd0325dd22

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -6,6 +6,8 @@
   "assets_filename": "assets.bin",
 
   "projectile_speed": 40.0,
+  "projectile_upkick": 7.5,
+  "projectile_offset": { "x": 0.0, "y": 0.0, "z": -0.5 },
   "gravity": -30.0,
   "bullet_max_steps": 5,
 
