Hooking patrons into rail denizen behavior
Adding rail movement to the menacing crocs. Includes changes to
apply entity specific changes to the base rail, such as offset and
rotation, so they can continue to share a single base rail file.

Change-Id: I26f4a866318226d95ae3b0175154bd6e52553f1b

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -386,6 +386,16 @@
         {
           "data_type": "ShadowDef",
           "data": { radius: 2 }
+        },
+        {
+          "data_type": "RailDenizenDef",
+          "data" : {
+            "start_time": 0,
+            "rail_file": "rails/line_loop.bin",
+            "initial_playback_rate": 0.75,
+            "update_orientation": false,
+            "rail_scale": { "x": 5, "y": 5, "z": 5 }
+          }
         }
       ]
     },
