--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -18,7 +18,7 @@
     "track_height": -1.5,
     "texture_tile_size": 5.0,
     "material": "materials/river.fplmat",
-    "shader": "shaders/textured"
+    "shader": "shaders/water"
   },
 
   "world_editor_config" : {
