--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -32,53 +32,72 @@
   },
 
   "entity_list": [
-    // Actve player:
+    // Raft
     {
       "component_list": [
         {
-          "data_type": "PlayerDef",
-          "data": {
-            "on_fire": {
-              "event_list": [
-                {
-                  "event_type": "PlaySound",
-                  "event": {
-                    "entity": "Source",
-                    "sound_name": "paper_bounce"
-                  }
-                },
-                {
-                  "event_type": "ModifyAttribute",
-                  "event": {
-                    "entity": "Source",
-                    "op": "Add",
-                    "attrib": "ProjectilesFired",
-                    "value": 1
-                  }
-                }
-              ]
-            }
-          }
-        },
-        {
           "data_type": "TransformDef",
           "data": {
-            "position": {
-              "x": 5.0,
-              "y": 0.0,
-              "z": 0.0
-            },
             "children": [
+              // Player on the raft
               {
                 "component_list": [
+                  {
+                    "data_type": "PlayerDef",
+                    "data": {
+                      "on_fire": {
+                        "event_list": [
+                          {
+                            "event_type": "PlaySound",
+                            "event": {
+                              "entity": "Source",
+                              "sound_name": "paper_bounce"
+                            }
+                          },
+                          {
+                            "event_type": "ModifyAttribute",
+                            "event": {
+                              "entity": "Source",
+                              "op": "Add",
+                              "attrib": "ProjectilesFired",
+                              "value": 1
+                            }
+                          }
+                        ]
+                      }
+                    }
+                  },
                   {
                     "data_type": "TransformDef",
                     "data": {
                       "position": {
-                        "x": 5.0,
+                        "x": 0.0,
                         "y": 0.0,
                         "z": 0.0
-                      }
+                      },
+                      "children": [
+                        {
+                          "component_list": [
+                            {
+                              "data_type": "TransformDef",
+                              "data": {
+                                "position": {
+                                  "x": 5.0,
+                                  "y": 0.0,
+                                  "z": 0.0
+                                }
+                              }
+                            },
+                            {
+                              "data_type": "RenderMeshDef",
+                              "data" : {
+                                "source_file":"meshes/sushi_rice.fplmesh",
+                                "shader": "shaders/textured"
+                              }
+                            }
+                          ]
+                        }
+                      ]
                     }
                   },
                   {
@@ -87,7 +106,16 @@
                       "source_file":"meshes/sushi_rice.fplmesh",
                       "shader": "shaders/textured"
                     }
+                  },
+                  {
+                    "data_type": "ListenerDef",
+                    "data" : {}
+                  },
+                  {
+                    "data_type": "AttributesDef",
+                    "data" : {}
                   }
+
                 ]
               }
             ]
@@ -103,7 +131,7 @@
                 {
                   "event_type": "ChangeRailSpeed",
                   "event": {
-                    "entity": "Source",
+                    "entity": "Raft",
                     "op": "Add",
                     "value": 0.25
                   }
@@ -118,14 +146,6 @@
             "source_file":"meshes/sushi_rice.fplmesh",
             "shader": "shaders/textured"
           }
-        },
-        {
-          "data_type": "ListenerDef",
-          "data" : {}
-        },
-        {
-          "data_type": "AttributesDef",
-          "data" : {}
         }
       ]
     },
@@ -261,7 +281,7 @@
                 {
                   "event_type": "ChangeRailSpeed",
                   "event": {
-                    "entity": "SourceOwner",
+                    "entity": "Raft",
                     "op": "Set",
                     "value": 1
                   }
